deployment/prometheus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-prometheus
spec:
  selector:
    app: gateway-prometheus
  ports:
    - name: default
      port: 9090
      targetPort: 9090
  type: LoadBalancer
