deployment/prometheus/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  rules:
    - host: prometheus.gateway.info
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway-prometheus
              servicePort: 9090
